Resolve some review comments